-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.6
-
None
-
191dd6e89fdca2108cfaf405e968a980ec6728ee
The default key mask generator used by the QWebsocket class does not handle the case if the returned mask key is 0. A 0 value mask key avoids WebSocket frames to be masked. If an unmasked frame is received by the server; the WebSocket server closes its connection to the client.