Change the mask generator to use QRandomGenerator instead of qs?rand

This makes it secure, instead of insecure, and requires no seeding.

Task-number: QTBUG-61694
Change-Id: Ia53158e207a94bf49489fffd14c782bd4ec24946
Reviewed-by: Jesus Fernandez <Jesus.Fernandez@qt.io>
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>